--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -486,7 +486,7 @@ journal = {Proceedings of the National Academy of Sciences}
 }
 
 @Article{Baele2012,
-  Title                    = {{Improving the accuracy of demographic and molecular clock model comparison while accommodating phylogenetic uncertainty}},
+  Title                    = {Improving the Accuracy of Demographic and Molecular Clock Model Comparison while Accommodating Phylogenetic Uncertainty},
   Author                   = {Baele, G. and Lemey, P. and Bedford, T. and Rambaut, A. and Suchard, M.A. and Alekseyenko, A.V.},
   Journal                  = MBE,
   Year                     = {2012},
@@ -514,7 +514,7 @@ journal = {Proceedings of the National Academy of Sciences}
 }
 
 @Article{Baele2013,
-  Title                    = {{Accurate Model Selection of Relaxed Molecular Clocks in Bayesian Phylogenetics}},
+  Title                    = {Accurate Model Selection of Relaxed Molecular Clocks in Bayesian Phylogenetics},
   Author                   = {Baele, G. and Li, W.L.S. and Drummond, A.J. and Suchard, M.A. and Lemey, P.},
   Journal                  = MBE,
   Year                     = {2013},
@@ -2205,7 +2205,7 @@ Coalescence Theory, Population Size, Divergence Times},
 }
 
 @Article{Fan2011,
-  Title                    = {Choosing among partition models in Bayesian phylogenetics},
+  Title                    = {Choosing among Partition Models in {B}ayesian Phylogenetics},
   Author                   = {Fan, Yu and Wu, Rui and Chen, Ming-Hui and Kuo, Lynn and Lewis, Paul O},
   Journal                  = MBE,
   Year                     = {2011},
@@ -4098,7 +4098,7 @@ Gives also a introduction what else can be used and what is good and bad in ML, 
 }
 
 @Article{Huelsenbeck2004,
-  Title                    = {{Bayesian phylogenetic model selection using reversible jump Markov chain Monte Carlo}},
+  Title                    = {Bayesian Phylogenetic Model Selection using Reversible Jump {M}arkov Chain {M}onte {C}arlo},
   Author                   = {Huelsenbeck, J.P. and Larget, B. and Alfaro, M.E.},
   Journal                  = MBE,
   Year                     = {2004},
@@ -4360,7 +4360,7 @@ Gives also a introduction what else can be used and what is good and bad in ML, 
 }
 
 @Book{Jeffreys1961,
-  Title                    = {The theory of probability},
+  Title                    = {The Theory of Probability},
   Author                   = {Jeffreys, Harold},
   Publisher                = {Oxford University Press},
   Year                     = {1961},
@@ -4536,7 +4536,7 @@ Description of their Conitnous Change proposal and the NNI and SPR. the CC is si
 }
 
 @Article{Kass1995,
-  Title                    = {Bayes factors},
+  Title                    = {Bayes Factors},
   Author                   = {Kass, R.E. and Raftery, A.E.},
   Journal                  = JASA,
   Year                     = {1995},
@@ -5012,7 +5012,7 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
 }
 
 @Article{Lartillot2006,
-  Title                    = {{Conjugate Gibbs Sampling for Bayesian Phylogenetic Models}},
+  Title                    = {Conjugate {G}ibbs Sampling for {B}ayesian Phylogenetic Models},
   Author                   = {Lartillot, N.},
   Journal                  = {Journal of Computational Biology},
   Year                     = {2006},
@@ -5119,7 +5119,7 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
 }
 
 @Article{Lavine1999,
-  Title                    = {Bayes factors: what they are and what they are not},
+  Title                    = {Bayes Factors: What They Are and What They Are Not},
   Author                   = {Lavine, Michael and Schervish, Mark J},
   Journal                  = {The American Statistician},
   Year                     = {1999},
@@ -8565,7 +8565,7 @@ Only done with MP!},
 }
 
 @Article{Suchard2001,
-  Title                    = {{Bayesian selection of continuous-time Markov chain evolutionary models}},
+  Title                    = {Bayesian Selection of Continuous-Time {M}arkov Chain Evolutionary Models},
   Author                   = {Suchard, Marc A and Weiss, Robert E and Sinsheimer, Janet S},
   Journal                  = MBE,
   Year                     = {2001},
@@ -9304,7 +9304,7 @@ eprint = {/oup/backfile/content_public/journal/sysbio/64/1/10.1093_sysbio_syu048
 }
 
 @Article{Xie2011,
-  Title                    = {Improving marginal likelihood estimation for Bayesian phylogenetic model selection},
+  Title                    = {Improving Marginal Likelihood Estimation for {B}ayesian Phylogenetic Model Selection},
   Author                   = {Xie, W. and Lewis, P.O. and Fan, Y. and Kuo, L. and Chen, M.H.},
   Journal                  = SYSBIO,
   Year                     = {2011},
