--- a/RB_MCMC_Tutorial/document/RB_MCMC_Tutorial.tex
+++ b/RB_MCMC_Tutorial/document/RB_MCMC_Tutorial.tex
@@ -509,7 +509,7 @@ RevBayes > source("RevBayes_scripts/analysis/mcmc_run5_PS0.Rev")
 RevBayes > mymcmc.operatorSummary()
 \end{lstlisting}
 \end{snugshade*}}
-When you look at the output you will see that it now mixing fairly well.
+When you look at the output you will see that it is now mixing fairly well.
 So let us focus on the approximated posterior distribution.
 Specifically, what is the posterior mean of the tree-length (\cl{TL})?
 This tree-length is surprisingly large. 
