--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -9800,6 +9800,11 @@ They used a simple NNI for rooted trees},
   timestamp = {2016.10.12},
 }
 
-
+@article{Stadler2017,
+  title={The fossilized birth-death model for the analysis of stratigraphic range data under different speciation concepts},
+  author={Stadler, Tanja and Gavryushkina, Alexandra and Warnock, Rachel and Drummond, Alexei J and Heath, Tracy A},
+  journal={arXiv preprint arXiv:1706.10106},
+  year={2017}
+}
 
 @Comment{jabref-meta: databaseType:bibtex;}
