tiny edit to TE tutorial

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -1314,7 +1314,7 @@ Why might a node with a sampled ancestor be referred to as a singleton?
 
 \QUEST How can you see the names of the fossils that are putative sampled ancestors?
 
-\QUEST Try mousing over different branches (see Fig\ \ref{fig:IcyTreeScreenshort}).
+\QUEST Try mousing over different branches (see Fig.\ \ref{fig:IcyTreeScreenshort}).
 What are the fields telling you?
 %Is the age of the \textit{Kretzoiarctos beatrix} fossil the same as what was shown in {\tt Tracer}? 
 
