--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -131,7 +131,7 @@ $$f[\mathcal{F}_i \mid a_i, b_i, t_i] = \begin{cases}
 0 & \text{otherwise}
 \end{cases}$$
 In other words, we assume the likelihood is equal to one if the inferred age is consistent with the data observed.
-We can represent this likelihood in \RevBayes using any uniform distribution that is proportional to the likelihood, \IE non-zero when the likelihood is equal to one (Fig. \ref{fig:tipsampling_gm}).
+We can represent this likelihood in \RevBayes using a distribution that is proportional to the likelihood, \IE non-zero when the likelihood is equal to one (Fig. \ref{fig:tipsampling_gm}).
 This model component represents the observed \textsf{Fossil Occurrence Time Data} in the modular graphical model shown in figure \ref{fig:module-gm}.
 \begin{figure}[h!]
 \fbox{%
