--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -147,7 +147,7 @@ This model component represents the observed \textsf{Fossil Occurrence Time Data
 It is worth noting that this is not technically the appropriate way to model fossil data that are actually observed as stratigraphic ranges. 
 In paleontology, a stratigraphic range represents the interval of time between the first and last appearences of a fossilized species. 
 Thus, this range typically represents multiple fossil specimens observed at different times along a single lineage. 
-An extension of the fossilized birth-death process has been described by \citet{Stadler2017}. 
+An extension of the fossilized birth-death process that is a distribution on stratigraphic ranges has been described by \citet{Stadler2017}. 
 This model is not yet fully implemented in \RevBayes.
 
 
