--- a/tutorial_TeX/RB_DiversificationRate_CharacterDependent_Tutorial/RB_DiversificationRate_CharacterDependent_Tutorial.tex
+++ b/tutorial_TeX/RB_DiversificationRate_CharacterDependent_Tutorial/RB_DiversificationRate_CharacterDependent_Tutorial.tex
@@ -9,13 +9,13 @@
 \renewcommand{\headrulewidth}{0.5pt}
 \headsep = 20pt
 \lhead{ }
-\rhead{\textsc {\RevBayes~Tutorial --- Episodic Diversification Rate Estimation}}
+\rhead{\textsc {\RevBayes~Tutorial --- State-Dependent Diversification Rate Estimation}}
 
 \thispagestyle{plain}
 \begin{center}
 
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large State-Specific Diversification Rate Estimation}}\\\vspace{2mm}
+\textbf{\it{\Large State-Dependent Diversification Rate Estimation}}\\\vspace{2mm}
 \vspace{1cm}
 {\Large Sebastian H{\"o}hna and Will Freyman}
 \vspace{1cm}
